--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,10 +26,8 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="lid" >Nieuw lid opvoeren</a></li>
-            <li><a class="dropdown-item" href="#">Bestaand lid wijzigen</a></li>
-            <li><a class="dropdown-item" href="#">Bestaand lid verwijderen</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" routerLink="leden">Overzicht alle leden</a></li>
+            <li><a class="dropdown-item" routerLink="leden">Beheren alle leden</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -38,9 +36,8 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="team">Nieuwe teamcategorie opvoeren</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" routerLink="teams">Beheren van de teams</a></li>
             </ul>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
