Schermen lidmaatschap, lid en leden aangepast Message toegevoegd

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,8 +44,8 @@
             Teamindeling
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" routerLink="lidmaatschappen">Lidmaatschappen</a></li>
+            <li><a class="dropdown-item" routerLink="lidmaatschap">Lidmaatschap</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
