--- a/src/app/lidmaatschap-form/lidmaatschap-form.component.html
+++ b/src/app/lidmaatschap-form/lidmaatschap-form.component.html
@@ -1,6 +1,3 @@
 <p>lidmaatschap-form works!</p>
 
-<h5>Alle teamleden van Aspiranten B</h5>
-<ul class="lidmaatschap">
-
-</ul>
+<h5>Koppel leden aan een team</h5>
