--- a/src/app/lidmaatschap-form/lidmaatschap-form.component.html
+++ b/src/app/lidmaatschap-form/lidmaatschap-form.component.html
@@ -1,3 +1,17 @@
 <p>lidmaatschap-form works!</p>
 
 <h5>Koppel leden aan een team</h5>
+
+<select [(ngModel)]="selectedRol">
+  <option value="" disabled>Kies rol in team</option>
+  <option *ngFor="let rol of rollen" [value]="rol">{{ rol }}</option>
+</select>
+<select [(ngModel)]="selectedLid">
+  <option value="" disabled>Kies lid</option>
+  <option *ngFor="let lid of leden" [value]="lid">{{ lid }}</option>
+</select>
+
+<input type="number" [(ngModel)]="lidmaatschap.team.id"
+       name="team" placeholder="Team-id" >
+
+<button (click)="add()">Opslaan</button>
