--- a/src/app/lidmaatschap-form/lidmaatschap-form.component.html
+++ b/src/app/lidmaatschap-form/lidmaatschap-form.component.html
@@ -10,7 +10,10 @@
   <option value="" disabled>Kies lid</option>
   <option *ngFor="let lid of leden" [value]="lid">{{ lid }}</option>
 </select>
-
+<select [(ngModel)]="selectedTeam">
+  <option value="" disabled>Kies team</option>
+  <option *ngFor="let team of teams" [value]="team">{{ team }}</option>
+</select>
 <input type="number" [(ngModel)]="lidmaatschap.team.id"
        name="team" placeholder="Team-id" >
 
